--- a/newcv.html
+++ b/newcv.html
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
-<html>
-
-    <head>
-
-       <meta charset= "utf-8" />
-       <title><strong>" Linder cédric "</strong></title><br/>
-
-       <img src="Pojet1/IMGE4779.JPG" alt="photo de Nina et moi" />
-
-    </head> 
-      
-    <body>
-
-         <h1>Mon expérience</h1><br/>
-
-     <p>
-     <ul>
-
-         <li>En 1999 BEP comptabilité</li>
-         <li>En 2001 Bac pro comptabilité</li>
-         <li>En 2002 Deug STAPS</li>
-         <li>En 2005 Agent de piste chez Europe Handling</li>
-         <li>En 2012 CAP <a href="https://fr.wikipedia.org">boulanger</a></li>
-         <li>En 2013 Responsable avion chez Europe Handling</li>
-         <li>En 2019 Chef Avion chez Aero Handling</li><br/>
-
-      </ul> 
-
-       <h1>Mes compétences</h1><br/>
-
-       <ul>
-
-          <li>HTML5 ET CSS3</li>
-          <li>JAVASCRIPT</li>
-          <li>SQL</li>
-
-      </ul>
-
-          <h1>Ma formation</h1><br/>
-
-       <ul>
-       <strong>Openclassrooms Développeur web</strong>
-
-       </ul>    
-
- </p>       
-
- </body> 
-
- </html>
+<html>   
+      <head>
+            <title>Mon cv html</title>
+            <meta charset="utf-8" />
+      </head>
+      <body>
+            <h1>
+                  <strong>Linder cédric</strong>
+            </h1>
+                  <a href="Images/IMG_E4779.JPG" >
+                        <img src="Images/IMG_E4779.JPG" alt="photo de Nina et moi" width="150px" />
+                  </a>
+            <br />
+            <h1>Mon expérience</h1>
+            <br />
+            <p>
+            <ul>
+                  <li>En 1999 BEP comptabilité</li>
+                  <li>En 2001 Bac pro comptabilité</li>
+                  <li>En 2002 Deug STAPS</li>
+                  <li>En 2005 Agent de piste chez Europe Handling</li>
+                  <li>En 2012 CAP <a href="https://www.cidj.com/metiers/boulanger-boulangere#:~:text=Le%20boulanger%20fabrique%20du%20pain,%22%20(sandwich%2C%20salades).">boulanger</a></li>
+                  <li>En 2013 Responsable avion chez Europe Handling</li>
+                  <li>En 2019 Chef Avion chez Aero Handling</li>
+            </ul>
+            <br />
+            <h1>Mes compétences</h1>
+            <br />
+            <ul>
+                  <li>HTML5 ET CSS3</li>
+                  <li>JAVASCRIPT</li>
+                  <li>SQL</li>
+            </ul>
+            <h1>Ma formation</h1>
+            <br />
+            <ul>
+                  <strong>Openclassrooms Développeur web</strong>
+            </ul>
+            </p>
+      </body>
+      </html>
