--- a/newcours.html
+++ b/newcours.html
@@ -172,7 +172,7 @@
             <br />
             <h2>Pour ajouter et déplacer une image sur la page</h2>
             <br/>
-            <p>ex: <p><img src="images/_E4779.png" alt=Photo de Nina et moi" class="flottant"(sur la page html) et .flottant{ float: left;}(sur la page css) /></p>
+            <p>ex: <p><img src="images/_E4779.png" alt="Photo de Nina et moi" class="flottant"(sur la page html) et .flottant{ float: left;}(sur la page css) /></p>
             <br />
             <h2>Si on veut soit à gauche ou droite d'un seul paragraphe</h2>
             <br />
