template iphone terminé, template desktop commencé

--- a/Reservia/index.html
+++ b/Reservia/index.html
@@ -22,8 +22,8 @@
             <div class="navigateur">
                 <nav>
                     <ul>
-                        <li class="link link_blue"><a href="#Hebergements">Hébergements</a></li>
-                        <li class="link link_black"><a href="#Activites">Activités</a></li>
+                        <li class="link"><a href="#Hebergements">Hébergements</a></li>
+                        <li class="link"><a href="#Activites">Activités</a></li>
                     </ul>
                 </nav>
             </div>
@@ -82,13 +82,12 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
             </div>
-            <div class="bloc_7">
-                <img class="picture-bloc-7" src="images\hebergements\4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                    alt="Hôtel Le soleil du matin" />
-                <div class="title-price-stars-bloc-7">
-                    <h4 class="title-bloc-7">Hôtel Le soleil du matin</h4>
+            <div class="item-container-famous">
+                <div class="img-hebergement img-1"></div>
+                <div class="title-price-stars-item-container">
+                    <h4>Hôtel Le soleil du matin</h4>
                     <p>Nuit à partir de 128€</p>
-                    <div class="stars">
+                    <div class="stars-famous">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -97,36 +96,34 @@
                     </div>
                 </div>
             </div>
-            <div class="bloc_8">
-                <img class="picture-bloc-8" src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"
-                    alt="Au coeur de l'eau Chambres d'hôtes" />
-                <div class="title-price-stars-bloc-8">
-                    <h4 class="title-bloc-8">Au coeur de l'eau Chambres d'hôtes</h4>
+            <div class="item-container-famous">
+                <div class="img-hebergement img-2"></div>
+                <div class="title-price-stars-item-container">
+                    <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                     <p>Nuit à partir de 71€</p>
-                    <div class="stars">
+                    <div class="stars-famous">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <div class="empty-star">
-                            <i class="far fa-star empty_star"></i>
+                        <div class="empty_star">
+                            <i class="fa fa-star empty_star"></i>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bloc_9">
-                <img class="picture-bloc-9" src="images\hebergements\4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                    alt="Hôtel Tout bleu et Blanc" />
-                <div class="title-price-stars-bloc-9">
-                    <h4 class="title-bloc-9">Hôtel Tout bleu et Blanc</h4>
+            <div class="item-container-famous">
+                <div class="img-hebergement img-3"></div>
+                <div class="title-price-stars-item-container">
+                    <h4>Hôtel Tout bleu et Blanc</h4>
                     <p>Nuit à partir de 68€</p>
-                    <div class="stars">
+                    <div class="stars-famous">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <div class="empty-star">
-                            <i class="far fa-star empty_star"></i>
+                            <i class="fa fa-star empty_star"></i>
                         </div>
                     </div>
                 </div>
@@ -134,27 +131,26 @@
         </aside>
     </section>
     <section>
-        <div class="flat_container">
-            <h4 class="title-container-flat">Hébergements à Marseille</h4>
-            <div class="bloc_1">
-                <img class="picture-bloc-1" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" />
-                <div class="title-price-stars-bloc-1">
-                    <h4 class="title-bloc-1">Auberge la cannebière</h4>
+        <div class="flat-container">
+            <h2 class="title-container-flat">Hébergements à Marseille</h2>
+            <div class="item-container">
+                <div class="img-flat img-4"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Auberge la cannebière</h4>
                     <p>Nuit à partir de <strong>25€</strong></p>
                     <div class="stars">
                         <i class="fa fa-star filled_star"></i>
                         <i class="fa fa-star filled_star"></i>
                         <i class="fa fa-star filled_star"></i>
                         <i class="fa fa-star filled_star"></i>
-                        <i class="far fa-star empty_star"></i>
+                        <i class="fa fa-star empty_star"></i>
                     </div>
                 </div>
             </div>
-            <div class="bloc_2">
-                <img class="picture-bloc-2" src="images\hebergements\4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                    alt="Hôtel du port" />
-                <div class="title-price-stars-bloc-2">
-                    <h4 class="title-bloc-2">Hôtel du port</h4>
+            <div class="item-container">
+                <div class="img-flat img-5"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Hôtel du port</h4>
                     <p>Nuit à partir de 52€</p>
                     <div class="stars">
                         <i class="fa fa-star filled star"></i>
@@ -165,56 +161,52 @@
                     </div>
                 </div>
             </div>
-            <div class="bloc_3">
-                <img class="picture-bloc-3" src="images\hebergements\4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                    alt="Hôtel les mouettes" />
-                <div class="title-price-stars-bloc-3">
-                    <h4 class="title-bloc-3">Hôtel les mouettes</h4>
+            <div class="item-container">
+                <div class="img-flat img-6"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Hôtel les mouettes</h4>
                     <p>Nuit à partir de 76€</p>
                     <div class="stars">
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
-                        <i class="far fa-star empty_star"></i>
+                        <i class="fa fa-star empty_star"></i>
                     </div>
                 </div>
             </div>
-            <div class="bloc_4">
-                <img class="picture-bloc-4" src="images\hebergements\4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                    alt="Hôtel de la mer" />
-                <div class="title-price-stars-bloc-4">
-                    <h4 class="title-bloc-4">Hôtel de la mer</h4>
+            <div class="item-container">
+                <div class="img-flat img-7"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Hôtel de la mer</h4>
                     <p>Nuit à partir de 46€</p>
                     <div class="stars">
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
-                        <i class="far fa-star empty_star"></i>
-                        <i class="far fa-star empty_star"></i>
+                        <i class="fa fa-star empty_star"></i>
+                        <i class="fa fa-star empty_star"></i>
                     </div>
                 </div>
             </div>
-            <div class="bloc_5">
-                <img class="picture-bloc-5" src="images\hebergements\4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                    alt="Hôtel le panier" />
-                <div class="title-price-stars-bloc-5">
-                    <h4 class="title-bloc-5">Hôtel le panier</h4>
+            <div class="item-container">
+                <div class="img-flat img-8"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Auberge le panier</h4>
                     <p>Nuit à partir de 23€</p>
                     <div class="stars">
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
                         <i class="fa fa-star filled star"></i>
-                        <i class="far fa-star empty_star"></i>
+                        <i class="fa fa-star empty_star"></i>
                     </div>
                 </div>
             </div>
-            <div class="bloc_6">
-                <img class="picture-bloc-6" src="images\hebergements\4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                    alt="Hôtel chez Amina" />
-                <div class="title-price-stars-bloc-6">
-                    <h4 class="title-bloc-6">Hôtel chez Amina</h4>
+            <div class="item-container">
+                <div class="img-flat img-9"></div>
+                <div class="title-price-stars-flat-container">
+                    <h4>Hôtel chez Amina</h4>
                     <p>Nuit à partir de 96€</p>
                     <div class="stars">
                         <i class="fa fa-star filled star"></i>
@@ -226,7 +218,9 @@
                 </div>
             </div>
         </div>
-        <strong>Afficher plus</strong>
+        <div class="show-more">
+            <strong>Afficher plus</strong>
+        </div>
     </section>
     <!--Fin de ma 2eme section-->
 
@@ -234,38 +228,31 @@
         <!--3eme section-->
         <div class="Activity_container">
             <div class="Activity_title">
-                <h4 class="title-principal-activity">Activités à Marseille</h4>
+                <h2 class="title-principal-activity">Activités à Marseille</h2>
             </div>
-            <div class="bloc-10">
-                <img class="picture_pier" src="images\activites\4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                    alt="Vieux Port">
-                <h4 class="title-activity">Vieux Port</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-10"></div>
+                <h4>Vieux Port</h4>
             </div>
-            <div class="bloc-11">
-                <img class="picture_fort" src="images\activites\4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                    alt="Fort de Pomègues">
-                <h4 class="title-activity">Fort de Pomègues</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-11"></div>
+                <h4>Fort de Pomègues</h4>
             </div>
-            <div class="bloc-12">
-                <img class="picture_îles" src="images\activites\4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                    alt="îles du Frioul">
-                <h4 class="title-activity">îles du Frioul</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-12"></div>
+                <h4>îles du Frioul</h4>
             </div>
-            <div class="bloc-13">
-                <img class="picture_parc_national"
-                    src="images\activites\4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                    alt="Parc National des Calanques">
-                <h4 class="title-activity">Parc National des Calanques</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-13"></div>
+                <h4>Parc National des Calanques</h4>
             </div>
-            <div class="bloc-14">
-                <img class="picture_notre_Dame" src="images\activites\4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                    alt="Notre-Dame-de-la-Garde">
-                <h4 class="title-activity">Notre-Dame-de-la-Garde</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-14"></div>
+                <h4>Notre-Dame-de-la-Garde</h4>
             </div>
-            <div class="bloc-15">
-                <img class="picture-parc" src="images\activites\4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                    alt="Parc Longchamp">
-                <h4 class="title-activity">Parc Longchamp</h4>
+            <div class="item-container-activity">
+                <div class="img-activity img-15"></div>
+                <h4>Parc Longchamp</h4>
             </div>
     </section>
     <!--fin de ma 3eme section-->
